tdf#163325 - Check Lower() frame during ToC preview

Change-Id: Ife0e974d66d5ddbe3c831c64e4da28442e476da4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177234
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins
(cherry picked from commit 2145204724049cad1585743c0b980ed2c6561212)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177529
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 2d57e13895703b541b918c0933b7dc5bbe25c300)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180368
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>